Fix alignment of cards again

--- a/css/main.scss
+++ b/css/main.scss
@@ -417,7 +417,6 @@ footer {
             margin-right: 20px;
         }
         margin-bottom: 0;
-        width: 500px;
     }
 
     .progress-bar {
